pipeline-integration/dso-kafka/manifests/deployment-dso-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dso-kafka
  labels:
    app: dso-kafka
#     version: v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dso-kafka
#       version: v4
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: dso-kafka
#         version: v4
    spec:
      containers:
        - name: dso-kafka
          image: dso-project/dso-kafka
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8082
