pipeline-integration/dso-kafka/manifests/service-dso-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: dso-kafka-service
  namespace: dev-kafka-edaapp
  labels:
    app: dso-kafka
spec:
  ports:
  - port: 80
    targetPort: 8082
    appProtocol: http
  selector:
    app: dso-kafka
  type: ClusterIP
